--- a/Publica/index.html
+++ b/Publica/index.html
@@ -15,7 +15,7 @@
                 <ul>
                     <li><a href="#conocenos">🏠 Ezagutu gaitzazu</a></li>
                     <li><a href="#servicios">💼 Zerbitzuak</a></li>
-                    <li><a href="#contacto">📧 Kontaktua</a></li>
+                    <li><a href="#contacto">📧 Kontaktuak</a></li>
                 </ul>
             </nav>
             <img src="assets/aimaitz.svg" alt="Aimaitz logotipoa" title="Aimaitz enpresa">
