foto nueva y quitar yourubew

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
             <!-- Video si eso quitar, queda mal -->
             <h3>Nola lan egiten dugu?</h3>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/holaaaaa" title="YouTube bideo" frameborder="0" allowfullscreen></iframe>
+            <img src="assets/tienda.png" alt="Foto de la tienda">
         </section>
 
         <!-- CONTACTO FORMULARIO -->
