--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <!-- Footer -->
         <footer>
-            <img src="assets/aimaitz.svg" alt="Logo txikia" title="Aimaitz" width="30">
+            <img src="assets/aimaitz.svg" alt="Logo txikia">
             <p>© 2025 AIMAITZ - Erronka Web Garapena</p>
             <p>Zornotza | Bizkaia</p>
         </footer>
