--- a/Trabajadores/index.html
+++ b/Trabajadores/index.html
@@ -47,7 +47,7 @@
                     <button type="submit" class="login-button">Sartu</button>
                     
                     <div class="info-box">
-                        <p>ℹ️ <strong>Informazioa:</strong></p>
+                        <p class="informazioa">ℹ️ <strong>INFORMAZIOA:</strong></p>
                         <p>Langileen ataria bakarrik baimendutako pertsonarentzat da.</p>
                         <p>Arazo bat baduzu, jarri harremanetan administrazioarekin.</p>
                     </div>
