--- a/Trabajadores/index.html
+++ b/Trabajadores/index.html
@@ -22,7 +22,7 @@
         <!-- Login Section -->
         <section id="login">
             <h1>🔐 Langileen Ataria</h1>
-            <p>Sartu zure kredentzialak fitxategiak deskargatzeko</p>
+            <p>Sartu zure kredentzialak</p>
             
             <div class="login-container">
                 <form id="loginForm">
@@ -57,7 +57,7 @@
 
         <!-- Footer -->
         <footer>
-            <img src="assets/aimaitz.svg" alt="Logo txikia" title="Aimaitz" width="30">
+            <img src="assets/aimaitz.svg" alt="Logo txikia">
             <p>© 2025 AIMAITZ - Langileen Ataria</p>
             <p>Zornotza | Bizkaia</p>
             <p style="font-size: 0.9rem; margin-top: 10px; opacity: 0.8;">🔒 Konexio segurua</p>
