--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
         <title>AIMAITZ - Enpresa Teknologikoa</title>
         <link rel="stylesheet" href="css/style.css">
         <link rel="icon" type="image/x-icon" href="assets/aimaitz.ico">
+        <!-- Esto para los iconos YO NO PAGO -->
+        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.1.0/css/all.css" />
+        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.1.0/css/sharp-solid.css" />
+        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.1.0/css/sharp-regular.css" />
+        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.1.0/css/sharp-light.css" />
+        <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v7.1.0/css/duotone.css" />
     </head>
     <body>
 
@@ -13,9 +19,9 @@
         <header id="header">
             <nav>
                 <ul>
-                    <li><a href="#conocenos">🏠 Ezagutu gaitzazu</a></li>
-                    <li><a href="#servicios">💼 Zerbitzuak</a></li>
-                    <li><a href="#contacto">📧 Kontaktua</a></li>
+                    <li><a href="#conocenos"><i class="fa-solid fa-house"></i> Ezagutu gaitzazu</a></li>
+                    <li><a href="#servicios"><i class="fa-solid fa-briefcase"></i> Zerbitzuak</a></li>
+                    <li><a href="#contacto"><i class="fa-solid fa-envelope"></i> Kontaktua</a></li>
                 </ul>
             </nav>
             <img src="assets/aimaitz.svg" alt="Aimaitz logotipoa" title="Aimaitz enpresa">
@@ -90,8 +96,8 @@
         <!-- CONTACTO FORMULARIO -->
         <section id="contacto">
             <h2>Kontaktua</h2>
-            <p>📧 aimaitz@empresa.com</p>
-            <p>📍 Zornotza, Bizkaia</p>
+            <p><i class="fa-solid fa-envelope"></i> aimaitz@empresa.com</p>
+            <p><i class="fa-solid fa-location-dot"></i> Zornotza, Bizkaia</p>
             <p>Jarraitu gaitzazu sare sozialetan gure proiektuak eta berrikuntzak ezagutzeko.</p>
             
             <!-- mejorar el css -->
