final del proyecto

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
         <!-- Header -->
         <header id="header">
+            <a href="https://www.digimobil.es/">
+                <img class="foto-digi" src="assets/Digi_2024_Logo.png" alt="Sponsor de digi" >
+            </a>
             <nav>
                 <ul>
                     <li><a href="#conocenos"><i class="fa-solid fa-house"></i> Ezagutu gaitzazu</a></li>
@@ -24,7 +27,7 @@
                     <li><a href="#contacto"><i class="fa-solid fa-envelope"></i> Kontaktua</a></li>
                 </ul>
             </nav>
-            <img src="assets/aimaitz.svg" alt="Aimaitz logotipoa" title="Aimaitz enpresa">
+            <img class="logo" src="assets/aimaitz.svg" alt="Aimaitz logotipoa">
         </header>
 
         <!-- pagina principal -->
@@ -36,7 +39,7 @@
         <!-- konócenos -->
         <section id="conocenos">
             <article>
-                <h2>Nor gara?</h2>
+                <h2><i class="fa-solid fa-user-group"></i> Nor gara?</h2>
                 <p>AIMAITZ teknologia-soluzio eskuragarriak eta sortzaileak eskaintzeko ideiarekin sortu zen. Digitala maite dugu: webguneak, irudiak, estrategiak eta zure marka hazteko behar duzun guztia diseinatzen dugu.</p>
                 <p>Pasioz lan egiten dugu, beti ikusgarriaren eta funtzionalaren arteko oreka bilatuz.</p>
                 
@@ -51,7 +54,7 @@
 
         <!-- SERVICIOS -->
         <section id="servicios">
-            <h2>Gure zerbitzuak</h2>
+            <h2><i class="fa-solid fa-layer-group"></i> Gure zerbitzuak</h2>
             <p>🔹<strong>Diseinu grafikoa:</strong> logotipoak, kartelak eta sare sozialetarako eduki bisualak sortzea.</p>
             <p>🔹<strong>Web garapena:</strong> orrialde modernoak, azkarrak eta gailu guztietara egokituta.</p>
             <p>🔹<strong>Marketing digitala:</strong> publizitate-kanpainak, sare sozialak eta bilatzaileen posizionamendua.</p>
@@ -88,19 +91,18 @@
                 </tbody>
             </table>
 
-            <!-- Video si eso quitar, queda mal -->
-            <h3>Nola lan egiten dugu?</h3>
+            <!-- 2 fotos de la empresa -->
+            <h3><i class="fa-solid fa-user-helmet-safety"></i> Nola lan egiten dugu?</h3>
+            <img src="assets/arreglar_servidor.png" alt="Arreglar servidor">
             <img src="assets/tienda.png" alt="Foto de la tienda">
         </section>
 
         <!-- CONTACTO FORMULARIO -->
         <section id="contacto">
-            <h2>Kontaktua</h2>
+            <h2><i class="fa-solid fa-messages"></i> Kontaktua</h2>
             <p><i class="fa-solid fa-envelope"></i> aimaitz@empresa.com</p>
-            <p><i class="fa-solid fa-location-dot"></i> Zornotza, Bizkaia</p>
-            <p>Jarraitu gaitzazu sare sozialetan gure proiektuak eta berrikuntzak ezagutzeko.</p>
             
-            <!-- mejorar el css -->
+            <!-- el formulario de contacto -->
             <h3>Mezua bidali</h3>
             <form action="#" method="post">
                 <label for="izena">Izena:</label>
@@ -138,7 +140,7 @@
             </form>
 
             <!-- mapa del fp -->
-            <h3>Non gaude?</h3>
+            <h3><i class="fa-solid fa-location-dot"></i> Non gaude?</h3>
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5814.733780011263!2d-2.7249987!3d43.222766799999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd4e369c4e0d1637%3A0x78ccbf7525105ab1!2sCIFP%20ZORNOTZA%20LHII!5e0!3m2!1ses!2ses!4v1761038316054!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </section>
 
