--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <!-- Footer -->
         <footer>
             <img src="assets/aimaitz.svg" alt="Logo txikia">
-            <a href="/trabajadores/index.html" style="text-decoration: none; color: white;">
+            <a href="trabajadores/index.html" style="text-decoration: none; color: white;">
                 <p><i class="fa-solid fa-user-lock"></i> Gune Privatua</p>
             </a>
             <p>© 2025 AIMAITZ - Erronka Web Garapena</p>
